Case Study Accessibility Updates

--- a/siaff/index.html
+++ b/siaff/index.html
@@ -40,13 +40,15 @@
           <div class="sectionDivider smallest-gap"></div>
           <ul class="vcrFont regularType">
             <li class="smallest-gap"><a class="dark-gray" href="#introduction">Introduction</a></li>
-            <li class="smallest-gap"><a class="dark-gray" href="#inspiration">Inspiration</a></li>
-            <li class="smallest-gap"><a class="dark-gray" href="#early-research">Early Research</a></li>
-            <li class="smallest-gap"><a class="dark-gray" href="#visualization">Visualization</a></li>
-            <li class="smallest-gap"><a class="dark-gray" href="#initial-design">Initial Design</a></li>
-            <li class="smallest-gap"><a class="dark-gray" href="#typeface-summary">Typeface Summary</a></li>
-            <li class="smallest-gap"><a class="dark-gray" href="#type-specimen">Type Specimen</a></li>
-            <li class="smallest-gap"><a class="dark-gray" href="#final-designs">Final Designs</a></li>
+            <li class="smallest-gap"><a class="dark-gray" href="#research">Research</a></li>
+            <li class="smallest-gap"><a class="dark-gray" href="#moodboard">Moodboards</a></li>
+            <li class="smallest-gap"><a class="dark-gray" href="#poster-design">Poster Design</a></li>
+            <li class="smallest-gap"><a class="dark-gray" href="#web-ads">Website Ads</a></li>
+            <li class="smallest-gap"><a class="dark-gray" href="#early-mistakes">Early Mistakes</a></li>
+            <li class="smallest-gap"><a class="dark-gray" href="#branding-application">Branding Apps</a></li>
+            <li class="smallest-gap"><a class="dark-gray" href="#web-design">Website Design</a></li>
+            <li class="smallest-gap"><a class="dark-gray" href="#learnings">Learnings</a></li>      
+            <li class="smallest-gap"><a class="dark-gray" href="#final-website">Final Website</a></li>                              
             <li class="smallest-gap"><a class="dark-gray" href="#conclusion">Conclusion</a></li>
           </ul>
         </div>
@@ -123,7 +125,7 @@
     </figure>
   </section>
 
-  <section class="inspiration margins large-gap toc-section" id="inspiration">
+  <section class="research margins large-gap toc-section" id="research">
     <header class="fadeinup section-title">
       <h3 class="vcrFont dark-gray regularType">research</h3>
       <h2 class="vcrFont largeType">Time to set the Stage</h2>
@@ -162,7 +164,7 @@
 
   </section>
 
-  <section class="margins larger-gap toc-section" id="moodboards">
+  <section class="margins larger-gap toc-section" id="moodboard">
     <header class="fadeinup section-title">
       <h3 class="vcrFont dark-gray regularType">poster moodboards</h3>
       <h2 class="vcrFont largeType">Developing brand directions </h2>
@@ -241,7 +243,7 @@
 
 
   
-  <section class="early-research margins large-gap toc-section" id="early-research">
+  <section class="margins large-gap toc-section">
     <header class="fadeinup section-title">
       <h3 class="vcrFont dark-gray regularType">design planning</h3>
       <h2 class="vcrFont largeType">Creating a modular typeface</h2>
@@ -309,7 +311,7 @@
         
   </section>  
   
-  <section class="margins larger-gap toc-section" id="initial-design">
+  <section class="margins larger-gap toc-section" id="poster-design">
     <header class="fadeinup section-title">
       <h3 class="vcrFont dark-gray regularType">poster design</h3>
       <h2 class="vcrFont largeType">Poster Sketches & Concepts</h2>
@@ -393,7 +395,7 @@
 
   </section>
 
-  <section class="margins larger-gap toc-section">
+  <section class="margins larger-gap toc-section" id="web-ads">
     <header class="fadeinup section-title">
       <h3 class="vcrFont dark-gray regularType">website advertisements</h3>
       <h2 class="vcrFont largeType">Spreading the word</h2>
@@ -435,7 +437,7 @@
 
   </section>
 
-  <section class="margins larger-gap toc-section" id="initial-design">
+  <section class="margins larger-gap toc-section" id="early-mistakes">
     <header class="fadeinup section-title">
       <h3 class="vcrFont dark-gray regularType">early mistakes</h3>
       <h2 class="vcrFont largeType">Fixing inconsistencies</h2>
@@ -516,7 +518,7 @@
   </section>
 
 
-  <section class="margins larger-gap toc-section">
+  <section class="margins larger-gap toc-section" id="web-design">
     <header class="fadeinup section-title">
       <h3 class="vcrFont dark-gray regularType">website design</h3>
       <h2 class="vcrFont largeType">Augmented Reality & HTML/CSS</h2>
@@ -569,7 +571,7 @@
 
   </section>
 
-  <section class="margins larger-gap toc-section" id="learning">
+  <section class="margins larger-gap toc-section" id="learnings">
     <header class="fadeinup section-title">
       <h3 class="vcrFont dark-gray regularType">learning</h3>
       <h2 class="vcrFont largeType">Let’s talk software</h2>
@@ -614,7 +616,7 @@
 
   </section>
 
-  <section class="margins larger-gap toc-section" id="final website">
+  <section class="margins larger-gap toc-section" id="final-website">
     <header class="fadeinup section-title">
       <h3 class="vcrFont dark-gray regularType">final website</h3>
       <h2 class="vcrFont largeType">Welcome to a modular SIAFF</h2>
@@ -763,19 +765,22 @@
     <header>
       <h2 class="vcrFont fadeinup largeType">Related Projects</h2>
     </header>
-    <figure class="fadeinup smallest-gap project-hover">
-      <a href="#">
-        <img src="../media/type_specimen_mockup_concrete.png" alt="Seoul International Architecture Film Festivals" class="mockupImage">
-      </a>
+    <figure class="fadeinup smallest-gap project-hover"><a href="https://richardlau.ca/artofvisualdata/">
+        <video aria-label="Art of Visual Data displaying multiple website screens, highlighting data visualization." 
+          class="mockupImage"style="aspect-ratio:16/9;" autoplay muted loop playsinline poster="artofvisualdata/caseStudy1/aovdWebsiteMockup.png">
+          <source src="https://richard-lau.b-cdn.net/aovd/aovd-motion-loop.webm" type="video/webm">
+          <source src="https://richard-lau.b-cdn.net/aovd/aovdWebMotionVideo.mp4" type="video/mp4">              
+          <source src="https://dl.dropboxusercontent.com/scl/fi/3xfbn9zcbm08zcmpq7zw5/aovdWebMotionVideo.mp4?rlkey=qh4srzpvmx9lint0lv9gofwyp&st=tbvlfxyw" type="video/mp4">
+    </a></video>
     </figure>
     <div class="project-tags smallest-gap">
       <ul class="fadeinup tags halyardBook regularType">
         <li>Typography</li>
         <li>Branding</li>
         <li>Website Design</li>
-        <li>HTML/CSS</li>
+        <li>Infographics</li>
       </ul>
-      <h3><a href="#" class="vcrFont regularType white fadeinup">see project</a></h3>
+      <h3><a href="https://richardlau.ca/artofvisualdata/" class="vcrFont regularType white fadeinup">see project</a></h3>
     </div>
   </section>  
 
