--- a/home.html
+++ b/home.html
@@ -137,18 +137,19 @@
       </article>
 
       <article class="project8 fadeinup">
-        <a href="https://richardlau.ca/queensgambit"><span class="visually-hidden">View project: Seoul International Architecture Film Festival</span>  
+        <a href="https://richardlau.ca/siaff/"><span class="visually-hidden">View project: Seoul International Architecture Film Festival</span>  
           <div class="thumbnailParent">
             <video aria-label="Featuring SIAFF website screens from mobile to desktop applications." class="Thumbnail2" autoplay muted loop playsinline>
               <source src="https://richard-lau.b-cdn.net/siaff/promo-web-video-siaff.webm" type="video/webm">
               <source src="https://richard-lau.b-cdn.net/siaff/promo-web-video-siaff.mp4" type="video/mp4">
               <source src="https://dl.dropboxusercontent.com/scl/fi/rrv7v4usj4hh6q8c1ps7w/promo-web-video-siaff.mp4?rlkey=nrngswf9hphx0yyvcjcwu8t15" type="video/mp4">
+              <source src="siaff/casestudy/video/promo-web-video-siaff.mp4" type="video/mp4">
             </video>
           </div> 
         </a>
         <header class="projectHeaders">
-          <a href="https://richardlau.ca/queensgambit" tabindex="-1">SIAFF - Festival Concept</a>
-          <a href="https://richardlau.ca/queensgambit" class="more">see project<span class="visually-hidden">details for SIAFF - Festival Concept</span></a>
+          <a href="https://richardlau.ca/siaff/" tabindex="-1">SIAFF - Festival Concept</a>
+          <a href="https://richardlau.ca/siaff/" class="more">see project<span class="visually-hidden">details for SIAFF - Festival Concept</span></a>
         </header>
         <p class="description">A conceptual bilingual festival brand featuring sexy custom fonts and a fully HTML/CSS prototyped website.</p>
         <div class="space"></div>
