Mobile Video Optimization

--- a/siaff/index.html
+++ b/siaff/index.html
@@ -589,7 +589,8 @@
 
     <article class="center-content larger-gap desktop-format">
       <figure class="fadeinup content-video">
-        <video alt="Video demonstrating the process of scanning a SIAFF playing card that leads to a mobile Augmented Reality Experience." class="mockupImage" autoplay muted loop controls playsinline poster="casestudy/loading-phone.png">
+        <video aria-label="Video demonstrating the process of scanning a SIAFF playing card that leads to a mobile Augmented Reality Experience." class="mockupImage" 
+        autoplay muted loop playsinline poster="casestudy/loading-phone.png">
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.webm" type="video/webm">
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.mp4" type="video/mp4">
         </video>    
@@ -613,7 +614,8 @@
       </div>  
 
       <figure class="fadeinup content-video">
-        <video alt="Video demonstrating the process of scanning a SIAFF playing card that leads to a mobile Augmented Reality Experience." class="mockupImage" autoplay muted loop controls playsinline poster="casestudy/loading-phone.png">
+        <video aria-label="Video demonstrating the process of scanning a SIAFF playing card that leads to a mobile Augmented Reality Experience." class="mockupImage" 
+        autoplay muted loop playsinline poster="casestudy/loading-phone.png">
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.webm" type="video/webm">
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.mp4" type="video/mp4">
         </video>    
@@ -799,6 +801,41 @@
         
       </article>        
     </div>
+
+    <!--Mobile format-->
+    <div class="mobile-format">
+      <article class="v2-text-and-image layout-center regular-gap">
+
+        <div class="v2-text-flex-1 fadeinup">
+          <h4 class="halyardRegular demiType">Multilingual Typeface Systems</h4>
+          <p class="halyardLight gray regularType">Through this project, I created multiple fonts in different languages with a cohesive modular type system, sharpening my ability to design visually complex structures, including full brand identities.</p>
+        </div>
+
+        <div class="v2-text-and-image-gap"></div>
+
+          <figure class="v2-image-flex-1 fadeinup">
+            <img src="casestudy/typeface-set.png" alt="Modular multilingual typeface specimens for architecture film festival branding." class="mockupImage">
+          </figure>  
+
+      </article>  
+
+      <article class="v2-text-and-image layout-center regular-gap">
+
+        <div class="v2-text-flex-1 fadeinup">
+          <h4 class="halyardRegular demiType">Design into Functional Websites</h4>
+          <p class="halyardLight gray regularType">I learned HTML, CSS, and accessibility best practices to bring my designs to life as a fully functional website. 
+            <br></br>
+            This process allowed me to create responsive, inclusive web experiences while deepening my understanding of front-end development.</p>
+        </div>        
+
+        <div class="v2-text-and-image-gap"></div>
+
+        <figure class="v2-image-flex-1 fadeinup">
+          <img src="casestudy/html-website-display.png" alt="Website layout shown with HTML and CSS code in browser developer tools." class="mockupImage">
+        </figure>  
+        
+      </article>        
+    </div>    
 
     <section class="learnings fadeinup large-gap">
       <header class="learnHead fadeinup">
