--- a/siaff/index.html
+++ b/siaff/index.html
@@ -457,7 +457,8 @@
     </figure>        
 
     <figure class="fadeinup packaging-center regular-gap">
-      <video alt="Wide digital banner ad with a black grid background and modular red-and-white typography reading “서울국제건축영화제,” with dates and venue details in a technical, system-style design." class="mockup-image-3" autoplay muted loop playsinline>
+      <video aria-label="Wide digital banner ad with a black grid background and modular red-and-white typography reading “서울국제건축영화제,” with dates and venue details in a technical, system-style design." class="mockup-image-3" 
+      autoplay muted loop playsinline>
         <source src="https://richard-lau.b-cdn.net/siaff/siaff_online_ad_kr.webm" type="video/webm">
         <source src="https://richard-lau.b-cdn.net/siaff/siaff_online_ad_kr.mp4" type="video/mp4">
 
@@ -590,7 +591,7 @@
     <article class="center-content larger-gap desktop-format">
       <figure class="fadeinup content-video">
         <video aria-label="Video demonstrating the process of scanning a SIAFF playing card that leads to a mobile Augmented Reality Experience." class="mockupImage" 
-        autoplay muted loop playsinline poster="casestudy/loading-phone.png">
+        autoplay muted loop playsinline poster="casestudy/loading-phone.png" class="mockupImage">
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.webm" type="video/webm">
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.mp4" type="video/mp4">
         </video>    
@@ -615,7 +616,7 @@
 
       <figure class="fadeinup content-video">
         <video aria-label="Video demonstrating the process of scanning a SIAFF playing card that leads to a mobile Augmented Reality Experience." class="mockupImage" 
-        autoplay muted loop playsinline poster="casestudy/loading-phone.png">
+        autoplay muted loop playsinline poster="casestudy/loading-phone.png" class="mockupImage">
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.webm" type="video/webm">
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.mp4" type="video/mp4">
         </video>    
