--- a/siaff/index.html
+++ b/siaff/index.html
@@ -591,7 +591,7 @@
     <article class="center-content larger-gap desktop-format">
       <figure class="fadeinup content-video">
         <video aria-label="Video demonstrating the process of scanning a SIAFF playing card that leads to a mobile Augmented Reality Experience." 
-        class="mockupImage" autoplay muted loop playsinline poster="casestudy/loading-phone.png">
+        class="mockupImage" autoplay muted loop playsinline>
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.webm" type="video/webm">
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.mp4" type="video/mp4">
           <source src="casestudy/video/lau.project3.ardemo.mp4" type="video/mp4">
@@ -617,10 +617,13 @@
 
       <figure class="fadeinup content-video">
         <video aria-label="Video demonstrating the process of scanning a SIAFF playing card that leads to a mobile Augmented Reality Experience." 
-        class="mockupImage" autoplay muted loop playsinline poster="casestudy/loading-phone.png">
+        class="mockupImage" autoplay muted loop playsinline>
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.webm" type="video/webm">
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.mp4" type="video/mp4">
+          <source src="casestudy/video/lau.project3.ardemo.mp4" type="video/mp4">
         </video>    
+
+        
       </figure>
       
     </article>    
