final-mobile-optimization-samsung

--- a/siaff/index.html
+++ b/siaff/index.html
@@ -594,6 +594,7 @@
         class="mockupImage" autoplay muted loop playsinline>
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.webm" type="video/webm">
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.mp4" type="video/mp4">
+          <source src="casestudy/video/lau.project3.ardemo.mp4" type="video/mp4">
         </video>    
       </figure>
       <div class="content-txt fadeinup">
@@ -619,6 +620,7 @@
         class="mockupImage" autoplay muted loop playsinline>
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.webm" type="video/webm">
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.mp4" type="video/mp4">
+          <source src="casestudy/video/lau.project3.ardemo.mp4" type="video/mp4">
         </video>    
 
         
