--- a/siaff/index.html
+++ b/siaff/index.html
@@ -593,8 +593,9 @@
         <video aria-label="Video demonstrating the process of scanning a SIAFF playing card that leads to a mobile Augmented Reality Experience." 
         class="mockupImage" autoplay muted loop playsinline>
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.webm" type="video/webm">
+          <source src="https://vz-ff393fa5-912.b-cdn.net/762363f4-94f5-4333-a680-797a5960972c/play_480p.mp4" type="video/mp4">
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.mp4" type="video/mp4">
-          <source src="casestudy/video/lau.project3.ardemo.mp4" type="video/mp4">
+
         </video>    
       </figure>
       <div class="content-txt fadeinup">
@@ -619,8 +620,9 @@
         <video aria-label="Video demonstrating the process of scanning a SIAFF playing card that leads to a mobile Augmented Reality Experience." 
         class="mockupImage" autoplay muted loop playsinline>
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.webm" type="video/webm">
+          <source src="https://vz-ff393fa5-912.b-cdn.net/762363f4-94f5-4333-a680-797a5960972c/play_480p.mp4" type="video/mp4">
           <source src="https://richard-lau.b-cdn.net/siaff/lau.project3.ardemo.mp4" type="video/mp4">
-          <source src="casestudy/video/lau.project3.ardemo.mp4" type="video/mp4">
+
         </video>    
 
         
