--- a/siaff/index.html
+++ b/siaff/index.html
@@ -444,6 +444,7 @@
         <source src="https://richard-lau.b-cdn.net/siaff/siaff_online_ad_en.webm" type="video/webm">
         <source src="https://richard-lau.b-cdn.net/siaff/siaff_online_ad_en.mp4" type="video/mp4">
 
+        <source src="https://vz-ff393fa5-912.b-cdn.net/ecef6045-2680-4319-952c-3ee358212d3b/play_480p.mp4" type="video/mp4">
         <source src="casestudy/video/siaff_online_ad_en.mp4" type="video/mp4">
       </video>    
       <figcaption class="halyardLight smallType gray">English SIAFF video advertisement</figcaption>
@@ -462,6 +463,7 @@
         <source src="https://richard-lau.b-cdn.net/siaff/siaff_online_ad_kr.webm" type="video/webm">
         <source src="https://richard-lau.b-cdn.net/siaff/siaff_online_ad_kr.mp4" type="video/mp4">
 
+        <source src="https://vz-ff393fa5-912.b-cdn.net/11c31e21-b81e-47a8-9361-d470bc8929e7/play_480p.mp4" type="video/mp4">
         <source src="casestudy/video/siaff_online_ad_kr.mp4" type="video/mp4">        
       </video>      
       <figcaption class="halyardLight smallType gray">Korean SIAFF video advertisement</figcaption>
@@ -690,6 +692,7 @@
         <source src="https://richard-lau.b-cdn.net/siaff/promo-web-video-siaff.webm" type="video/webm">
         <source src="https://richard-lau.b-cdn.net/siaff/promo-web-video-siaff.mp4" type="video/mp4">
         <source src="https://dl.dropboxusercontent.com/scl/fi/rrv7v4usj4hh6q8c1ps7w/promo-web-video-siaff.mp4?rlkey=nrngswf9hphx0yyvcjcwu8t15" type="video/mp4">
+        <source src="https://vz-ff393fa5-912.b-cdn.net/5b30ca4c-f5c6-463f-95b8-71c2f403a1d0/play_480p.mp4" type="video/mp4">
       </video>  
     </figure>
 
