--- a/home.html
+++ b/home.html
@@ -142,6 +142,7 @@
             <video aria-label="Featuring SIAFF website screens from mobile to desktop applications." class="Thumbnail2" autoplay muted loop playsinline>
               <source src="https://richard-lau.b-cdn.net/siaff/promo-web-video-siaff.webm" type="video/webm">
               <source src="https://richard-lau.b-cdn.net/siaff/promo-web-video-siaff.mp4" type="video/mp4">
+              <source src="https://vz-ff393fa5-912.b-cdn.net/ecef6045-2680-4319-952c-3ee358212d3b/play_480p.mp4" type="video/mp4">
               <source src="https://dl.dropboxusercontent.com/scl/fi/rrv7v4usj4hh6q8c1ps7w/promo-web-video-siaff.mp4?rlkey=nrngswf9hphx0yyvcjcwu8t15" type="video/mp4">
               <source src="siaff/casestudy/video/promo-web-video-siaff.mp4" type="video/mp4">
             </video>
