--- a/about/index.html
+++ b/about/index.html
@@ -137,7 +137,7 @@
   <div class="sectionDivider gray margins regular-gap fadeinup"></div> 
 
   <section class="margins regular-gap">
-    <h2 class="vcrFont largerType fadeinup">My Core Values</h2>
+    <h2 class="vcrFont largerType fadeinup">My Simple Pleasures</h2>
 
     <article class="row-flex lighter-gap fadeinup">
       <figure class="image-txt-custom-3">
