--- a/about/index.html
+++ b/about/index.html
@@ -35,7 +35,7 @@
 
 <main>
 
-  <section class="margins page-header desktop-format">
+  <section class="margins page-header desktop-format fadeinup">
 
     <figure class="img-head">
       <img src="media/collage-art.png" class="mockupImage">
@@ -58,7 +58,7 @@
       
   </section>
 
-  <section class="margins page-header mobile-format">
+  <section class="margins page-header mobile-format fadeinup">
 
     <header class="project-header">
       <div class="scrollIndicator desktop-format">
