--- a/fishbones/index.html
+++ b/fishbones/index.html
@@ -22,7 +22,7 @@
         <a href="https://richardlau.ca" class="logo" role="link" aria-label="Button to Homepage">richard</a>
         <nav class="nav-links">
             <ul>
-            <li><a href="https://richardlau.ca/home/">home</a></li>
+            <li><a href="https://richardlau.ca/home">home</a></li>
             <li><a href="https://richardlau.ca/about/">about</a></li>
             <li><a href="https://richardlau.ca/fishbones/">fishbones</a></li>
             <li><a href="https://drive.google.com/file/d/1HeYr4Dw9TadbNes3u8uDA5jCR6kDGA6j/view?usp=sharing" target="_blank">resume</a></li>
