--- a/home.html
+++ b/home.html
@@ -31,8 +31,8 @@
       <nav class="nav-links">
         <ul>
           <li><a href="https://richardlau.ca/home">home</a></li>
-            <li><a href="https://richardlau.ca/about">about</a></li>
-          <li><a href="#">fishbones</a></li>
+          <li><a href="https://richardlau.ca/about/">about</a></li>
+          <li><a href="https://richardlau.ca/fishbones/">fishbones</a></li>
           <li><a href="https://drive.google.com/file/d/1HeYr4Dw9TadbNes3u8uDA5jCR6kDGA6j/view?usp=sharing" target="_blank">resume</a></li>
         </ul>
       </nav>
