--- a/about/index.html
+++ b/about/index.html
@@ -21,12 +21,12 @@
         <header class="navbar margins" role="banner">
         <a href="https://richardlau.ca" class="logo" role="link" aria-label="Button to Homepage">richard</a>
         <nav class="nav-links">
-            <ul>
+          <ul>
             <li><a href="https://richardlau.ca/home">home</a></li>
-            <li><a href="https://richardlau.ca/about">about</a></li>
-            <li><a href="#">fishbones</a></li>
+            <li><a href="https://richardlau.ca/about/">about</a></li>
+            <li><a href="https://richardlau.ca/fishbones/">fishbones</a></li>
             <li><a href="https://drive.google.com/file/d/1HeYr4Dw9TadbNes3u8uDA5jCR6kDGA6j/view?usp=sharing" target="_blank">resume</a></li>
-            </ul>
+          </ul>
         </nav>
         </header>
         <div class="divider"></div>
