--- a/artofvisualdata-typeface/index.html
+++ b/artofvisualdata-typeface/index.html
@@ -880,8 +880,8 @@
       <h2 class="vcrFont fadeinup largeType">Featured Project</h2>
     </header>
     <figure class="fadeinup smallest-gap project-hover">
-      <a href="#">
-        <img src="../media/type_specimen_mockup_concrete.png" alt="Seoul International Architecture Film Festivals" class="mockupImage">
+      <a href="https://richardlau.ca/siaff/">
+        <img src="../siaff/casestudy/lau_richard_siaff_posters.png" alt="Seoul International Architecture Film Festival posters." class="mockupImage">
       </a>
     </figure>
     <div class="project-tags smallest-gap">
@@ -891,7 +891,7 @@
         <li>Website Design</li>
         <li>HTML/CSS</li>
       </ul>
-      <h3><a href="#" class="vcrFont regularType white fadeinup">see project</a></h3>
+      <h3><a href="https://richardlau.ca/siaff/" class="vcrFont regularType white fadeinup">see project</a></h3>
     </div>
   </section>  
 
