meta data changes

--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
 
   <!-- Open Graph tags -->
   <meta property="og:title" content="Richard Lau RGD">
-  <meta property="og:description" content="What's up! I'm Richard, a nationally recognized designer and a teacher with an obsession for storybuilding, esports media, yadayadayada you get the bit...">
-  <meta property="og:image" content="https://richardlau.ca/media/type_specimen_mockup_concrete.png">
+  <meta property="og:description" content="Richard Lau is a Toronto-based UI/UX designer creating engaging digital experiences, designing for UofT Esports, freelancing globally, and gaming enthusiast.">
+  <meta property="og:image" content="https://richardlau.ca/about/media/collage-art.png">
   <meta property="og:url" content="https://richardlau.ca/">
   <meta property="og:type" content="website">
 
