--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 
   <!-- Open Graph tags -->
   <meta property="og:title" content="Richard Lau RGD">
-  <meta property="og:description" content="Richard Lau is a Toronto-based UI/UX designer creating engaging digital experiences, designing for UofT Esports, freelancing globally, and gaming enthusiast.">
+  <meta property="og:description" content="Richard Lau is a Toronto-based UI/UX designer who focuses on creating engaging digital experiences, currently working with University of Toronto Esports.">
   <meta property="og:image" content="https://richardlau.ca/about/media/collage-art.png">
   <meta property="og:url" content="https://richardlau.ca/">
   <meta property="og:type" content="website">
@@ -22,6 +22,14 @@
 </head>
 
 <body>
+
+  <section class="loading-video" 
+  style="position: fixed; z-index: 9999; background-color: #131416; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
+    <video autoplay muted loop playsinline 
+      style="width: 12%;"> 
+      <source src="media/loadingvid.webm">
+    </video>
+  </section>
 
 <!-- This is our navigation bar. -->  
 <section class="fixedContainer">
