--- a/home.html
+++ b/home.html
@@ -25,9 +25,10 @@
 
   <section class="loading-video" 
   style="position: fixed; z-index: 9999; background-color: #131416; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
-    <video autoplay muted loop playsinline 
-      style="width: 12%;"> 
-      <source src="media/loadingvid.webm">
+    <video autoplay muted loop playsinline class="loading-width" aria-label="Loading..."> 
+      <source src="https://vz-ff393fa5-912.b-cdn.net/f297bb8d-dda0-4703-a1eb-39bfcd95d161/play_240p.mp4" type="video/webm">
+      <source src="https://vz-ff393fa5-912.b-cdn.net/f297bb8d-dda0-4703-a1eb-39bfcd95d161/play_240p.mp4" type="video/mp4">
+      <source src="media/loadingvid.webm" type="video/webm">
     </video>
   </section>
 
