--- a/artofvisualdata/index.html
+++ b/artofvisualdata/index.html
@@ -124,6 +124,8 @@
 
     <figure class="projectThumbnail2 fadeinup">
       <video aria-label="Desktop Mockup of Art of Visual Data's article landing page." class="mockupImage" autoplay muted loop playsinline>
+        <source src="https://richard-lau.b-cdn.net/aovd/articleHomeLanding-compressed-webm.webm" type="video/webm">
+        <source src="https://vz-ff393fa5-912.b-cdn.net/0f4b55d9-afbb-4a44-9c49-02a063aea8a4/play_720p.mp4" type="video/mp4">
         <source src="https://dl.dropboxusercontent.com/scl/fi/10mgjgh2bz2jldbi92nv5/articleHomeLanding.mp4?rlkey=qkw5mdwezibsnimezezf6rlaz&st=sf4w4nnp" type="video/mp4">
       </video>
     </figure>
@@ -392,7 +394,9 @@
     <article class="ideation desktopIdea fadeinup">
       <figure class="ideationFigure">
         <video aria-label="Desktop Mockup of Art of Visual Data's homepage." class="mockupImage" autoplay muted loop playsinline>
-           <source src="https://dl.dropboxusercontent.com/scl/fi/rhpu7s4j8l12pb2iids26/graphideationInteractionC.mp4?rlkey=rrvxdp8kanndz35u8ugqw0wb8" type="video/mp4">
+          <source src="https://richard-lau.b-cdn.net/aovd/interactionC-compressed.webm" type="video/webm">
+          <source src="https://vz-ff393fa5-912.b-cdn.net/d070cd41-8bfd-4e89-926a-f615da1c3664/play_720p.mp4" type="video/mp4">
+          <source src="https://dl.dropboxusercontent.com/scl/fi/rhpu7s4j8l12pb2iids26/graphideationInteractionC.mp4?rlkey=rrvxdp8kanndz35u8ugqw0wb8" type="video/mp4">
         </video>
       </figure>       
       <div class="ideationText">
@@ -410,7 +414,9 @@
       </div>
       <figure class="ideationFigure">
         <video aria-label="Desktop Mockup of Art of Visual Data's homepage." class="mockupImage" autoplay muted loop playsinline>
-           <source src="https://dl.dropboxusercontent.com/scl/fi/rhpu7s4j8l12pb2iids26/graphideationInteractionC.mp4?rlkey=rrvxdp8kanndz35u8ugqw0wb8" type="video/mp4">
+          <source src="https://richard-lau.b-cdn.net/aovd/interactionC-compressed.webm" type="video/webm">
+          <source src="https://vz-ff393fa5-912.b-cdn.net/d070cd41-8bfd-4e89-926a-f615da1c3664/play_720p.mp4" type="video/mp4">          
+          <source src="https://dl.dropboxusercontent.com/scl/fi/rhpu7s4j8l12pb2iids26/graphideationInteractionC.mp4?rlkey=rrvxdp8kanndz35u8ugqw0wb8" type="video/mp4">
         </video>
       </figure>       
     </article>
@@ -479,8 +485,10 @@
     <!-- desktop version -->
     <section class="finalDesignImages desktopFinals">
       <video aria-label="Desktop Mockup of Art of Visual Data's homepage." class="mockupImage fadeinup" autoplay muted loop playsinline>
+        <source src="https://richard-lau.b-cdn.net/aovd/homePageMockup-compressed.webm" type="video/webm">       
         <source src="https://dl.dropboxusercontent.com/scl/fi/y1w3c3i9j4l52jrnzc6mh/homePageMockup.mp4?rlkey=gybzsfu61upzaqydcbquip8b6" type="video/mp4">
         <source src="caseStudy1/homePageMockup.mp4" type="video/mp4">
+        <source src="https://vz-ff393fa5-912.b-cdn.net/e5894b5d-0d5d-48ef-a220-a27348670fb6/play_720p.mp4" type="video/mp4"> 
       </video>
       
       <article class="videoCaptionCombination1 fadeinup">
