--- a/artofvisualdata/index.html
+++ b/artofvisualdata/index.html
@@ -587,6 +587,8 @@
 
     <figure id="motionGraphic" class="fadeinup">
       <video aria-label="Motion graphic of Art of Visual Data's branding, purpose, and mockups." class="mockupImage" loop controls muted playsinline>
+        <source src="https://richard-lau.b-cdn.net/aovd/aovdMotionPresentationTrimmed-compressed.webm" type="video/webm">
+        <source src="https://vz-ff393fa5-912.b-cdn.net/613e93d3-29ca-46d1-88c1-91ba31ae3412/play_720p.mp4" type="video/mp4">
         <source src="https://dl.dropboxusercontent.com/scl/fi/sbpz47myvsmuqylyqe2yp/aovdMotionPresentationTrimmed.mp4?rlkey=suqu0j6uylprxdxu52z5jkxt9" type="video/mp4">
       </video>
     </figure>
@@ -607,7 +609,9 @@
     <p class="paragraphStyle2 fadeinup" id="finalIntroduction">The 'DataSense' tool of the AoVD website is designed for the general public interested in improving their data literacy skills. This tool gamifies learning with rankings, achievements, and Zeigarnik effect-based progress bars, encouraging reflection and long-term engagement.</p>
     <figure>
       <video aria-label="Desktop Mockup of Art of Visual Data's DataSense tool. Initially presents user statistics and progresses towards questions and lessons." class="mockupImage" autoplay muted loop playsinline>
+        <source src="https://richard-lau.b-cdn.net/aovd/dataSenseMockup-compressed.webm" type="video/webm">
         <source src="https://dl.dropboxusercontent.com/scl/fi/z3vtz1xsl6lsrj4vyiqee/dataSenseMockup.mp4?rlkey=cfzg5cfzkgrxctwamubixah2i&st=bxuhd7cf" type="video/mp4">
+        <source src="https://vz-ff393fa5-912.b-cdn.net/e3310827-e9d8-458c-9f37-95d1cc63ef39/play_720p.mp4" type="video/mp4">
       </video>
     </figure>
   </section>
@@ -663,8 +667,10 @@
         <p class="paragraphStyle2">— Eric, 3D Artist</p>
       </blockquote>
       <video aria-label="Desktop Mockup of Art of Visual Data's article landing page." class="quoteVideo" autoplay muted loop playsinline>
+        <source src="https://richard-lau.b-cdn.net/aovd/articleHomeLanding-compressed-webm.webm" type="video/webm">
         <source src="https://dl.dropboxusercontent.com/scl/fi/10mgjgh2bz2jldbi92nv5/articleHomeLanding.mp4?rlkey=qkw5mdwezibsnimezezf6rlaz" type="video/mp4">
         <source src="caseStudy1/articleHomeLanding.mp4" type="video/mp4">
+        <source src="https://vz-ff393fa5-912.b-cdn.net/0f4b55d9-afbb-4a44-9c49-02a063aea8a4/play_720p.mp4" type="video/mp4">
       </video>
     </div>
 
